[tool.poetry]
name = "cozychat"
version = "0.3.0"
description = "Requirements for running and checking Cozychat"
authors = ["Daniil Lysukhin <@lysukhin>"]

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
# https://endoflife.date/python
python = "^3.8.1"
jupyterlab = "^4.0.7"
nbconvert = { version = "*", extras = ["webpdf"] }
tqdm = "^4.66.1"
pandas = "^2.0.3"
seaborn = "^0.13.0"
wordcloud = "^1.9.2"
razdel = "^0.5.0"
stop-words = "^2018.7.23"
python-obscene-words-filter = "^0.1.6"
dostoevsky = "^0.6.0"
# Forked from https://github.com/cfculhane/fastText.git
# https://github.com/facebookresearch/fastText/pull/1292
fasttext = { git = "https://github.com/gpchelkin/fastText", branch = "main" }
scipy = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
